# IUT-cours

./: .gitmodules  CR_TECHDAY_DOMERGUE.md  README.md
Auto-clicker/: auto_clicker.py  my_ac.py
Portfolio/: RapportStage.odt
R301/: Clée tkinter  R308 TP1.odt  TP2_DOMERGUE.md  clée tp1-r309
R302/: R4_i4_startup-config.cfg
R305/: TP2.md
R306/: TP_Bilan.md
R308/: TP3-R308-DOMERGUE-Mathys.ipynb
R309/: cours.md  test.py
R310/: CR_TP_DOMERGUE.md  listeLyceens.sql  poursuiteEtudes.sql
R311/: anglais.md
R314/: DOMERGUE_TP1_R314.odt  Partie2_1.grc  top_block.py
R315/: .~lock.gestion de projet R303.pptx#  Automatisation devops-licpro-dif .pptx  exo.py
R320/: .~lock.Puissance et énergie FISE+FISA.odp#  revision.md  td.md
R321/: TD3.md  TP_FM_CAUBEL_DOMERGUE.md  Télécoms spatiales partie résumé des épisodes précédents 123.odp  td.md  td1.md
R3C16/: R3C16-pentesting-partie-1.odp
R3D16/: .~lock.cours-cloud-but-jmp-2023.odp#
R3D17/: Panorama_de_la_virtualisation-septembre-2022_sans-Docker.odp  cours.md
R401/: R401_CM.odp  TP2_R401_DOMERGUE.md  certificat.crs  certificat.csr  clefpub.key  fichier.txt.asc  fichier.txt.gpg  fichier.txt.gpg.asc  tc.key  tokken.odt
R403/: TP1.odt  TP2.odt
R405/: AUTOMATISATION-COURS.pptx  TD1.md  TD2.md  TD3.md
R408/: Diapo_DOMERGUE.odp  Diapo_snapchat_PPP.pptx
R409/: TD1_DOMERGUE.md
R411/: cr_DOMERGUE.md
R411/R411-IOM-TD-01-FEC-base2/: CMakeLists.txt  cb-fec  cb-fec.c
R420/: cours.md  progtd1.py  td2.py  test.py
SAE301/: note.md
SAE303/: ip a pas metre sur le dhcp  schemap.drawio
SAE3I03/: Suivie
(+327 files in other folders)
