project(M3107_TD_05)
cmake_minimum_required(VERSION 3.0)
add_compile_options(-std=c99 -O2 -Wall -Werror)
find_package(PkgConfig REQUIRED)
find_library(LIQUID liquid REQUIRED)
message("LIQUID: ${LIQUID}")
file( GLOB SRC RELATIVE "${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/*.c" )
foreach( cSource ${SRC} )
  string( REPLACE ".c" "" prgName ${cSource} )
  add_executable(${prgName} ${cSource})
  target_link_libraries(${prgName} ${LIQUID})
endforeach( cSource )
